<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Carlos René Ramos López. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.dev.musicapp.ui.viewmodels.PlaylistViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_recyclerview"
            app:paddingEnd="@dimen/padding_15"
            app:paddingStart="@dimen/padding_12" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginBottom="140dp"
            android:orientation="vertical"
            android:visibility="@{viewModel.playLists().size() > 0 ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_playlist"
                android:textColor="?subTitleTextColor"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding_top"
                android:gravity="center"
                android:text="@string/playlist_tip"
                android:textColor="?bodyTextColor"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <Button
            android:id="@+id/createPlayList"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_size"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="140dp"
            android:background="@drawable/btn_play_background"
            android:contentDescription="@string/cover"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="@dimen/margin_6"
            android:drawableTint="@color/white"
            android:elevation="3dp"
            android:padding="@dimen/margin_12"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>