<!--
  ~ Copyright (c) 2020. Carlos René Ramos López. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/btn_ripple"
            android:contentDescription="@string/cover"
            android:onClick="back"
            android:tint="?colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:padding="7dp"
            android:text="@string/settings"
            android:textColor="?subTitleTextColor"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/back" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_10"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/themes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="@string/appearance"
                        android:textColor="?bodyTextColor"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        app:clipToOutline="@{true}"
                        android:background="@drawable/song_detail_cover_frame"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/themes">

                        <LinearLayout
                            android:id="@+id/theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/list_item_ripple"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:onClick="showThemes"
                            android:orientation="horizontal"
                            android:padding="@dimen/margin_10"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="@dimen/btn_size"
                                android:layout_height="@dimen/btn_size"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_theme"
                                app:tint="?btnTintColor" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintTop_toBottomOf="@id/themes">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:maxLines="1"
                                    android:text="@string/theme_title"
                                    android:textColor="?titleTextColor"
                                    android:textSize="@dimen/title_text_size" />

                                <TextView
                                    android:id="@+id/sub_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:maxLines="1"
                                    android:text="@string/settings_theme_description"
                                    android:textColor="?colorAccent"
                                    android:textSize="@dimen/sub_title_text_size" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>