<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Carlos René Ramos López. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.dev.musicapp.ui.viewmodels.SongViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary">

        <CheckBox
            android:id="@+id/selected"
            android:textColor="?titleTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/all"
            android:theme="@style/CustomCheckbox"
            android:onClick="selectAll"/>

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_weight="1"
            android:maxLines="1"
            android:padding="7dp"
            android:text="@string/select_tracks"
            android:textColor="?titleTextColor"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/selected"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toEndOf="@+id/selected"
            app:layout_constraintTop_toTopOf="@+id/selected"
            app:selectedSongs="@{viewModel.selectedSongs()}"/>

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/btn_ripple_with_background"
            android:contentDescription="@string/cover"
            android:textAllCaps="false"
            android:tint="?btnTintColor"
            android:onClick="doneClick"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_done"
            android:layout_marginEnd="@dimen/margin_10"
            app:layout_constraintBottom_toBottomOf="@+id/activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/activity_title"
            app:animate="@{true}"
            app:visible="@{viewModel.selectedSongs().size > 0}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/song_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/album_detail_shape"
            android:layout_marginTop="@dimen/global_padding_top"
            android:theme="@style/OverScrollColor"
            app:clipToOutline="@{true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>