<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Carlos René Ramos López. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.dev.musicapp.ui.viewmodels.SearchViewModel" />

        <variable
            name="status"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?colorPrimary">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/coverSize"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@drawable/search_text_view_frame"
            android:elevation="2dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="@dimen/coverSize"
                android:layout_height="@dimen/coverSize"
                android:background="@drawable/btn_ripple"
                android:contentDescription="@string/cover"
                android:src="@drawable/ic_back"
                android:tint="?bodyTextColor" />

            <EditText
                android:id="@+id/search_src_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="@android:string/search_go"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_msg"
                android:inputType="text"
                android:paddingStart="@dimen/padding_12"
                android:paddingEnd="@dimen/padding_12"
                android:textColor="?titleTextColor"
                android:textColorHint="?bodyTextColor"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="@dimen/coverSize"
                android:layout_height="@dimen/coverSize"
                android:background="@color/transparent"
                android:contentDescription="@string/cover"
                android:src="@drawable/ic_close"
                android:tint="?bodyTextColor"
                app:visible="@{status}" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/album_detail_shape"
            android:layout_marginTop="@dimen/separator"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:visible="@{!(viewModel.searchLiveData().isNotEmpty())}" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/separator"
            android:clipToPadding="false"
            app:clipToOutline="@{true}"
            android:paddingBottom="@dimen/song_item_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_marginBottom="140dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:visible="@{!(viewModel.searchLiveData().isNotEmpty())}">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results"
                android:textColor="?subTitleTextColor"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding_top"
                android:gravity="center"
                android:text="@string/search_tip"
                android:textColor="?bodyTextColor"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>